# django-countries-plus

./: .coverage  .gitignore  .python-version  .travis.yml  AUTHORS.rst  CHANGELOG.md  CHANGES.txt  CONTRIBUTING.rst  LICENSE  LICENSE.txt  MANIFEST  MANIFEST.in  Makefile  README.rst  README.txt  coverage.xml  pyproject.toml  pytest.ini  requirements_dev.txt  requirements_test.txt  runtests.py  setup.cfg  setup.py  tox.ini
.github/workflows/: tox.yml
countries_plus/: __init__.py  admin.py  apps.py  context_processors.py  middleware.py  models.py  tests.py  utils.py
countries_plus/fixtures/: initial_data.json
countries_plus/management/commands/: __init__.py  update_countries_plus.py
countries_plus/migrations/: 0001_initial.py  0002_auto_20150120_2225.py  0003_auto_20150611_1446.py  0004_auto_20150616_1242.py  0005_auto_20160224_1804.py
countries_plus/tests/: __init__.py  test_models.py  tests.py  urls.py
countries_plus/tests/templates/: test.html
countriesplus/: admin.py  models.py
countriesplus/fixtures/: initial_dta.json
example_project/example_project/: asgi.py  settings.py  urls.py  wsgi.py
example_project/sample_app/: admin.py  models.py
example_project/sample_app/migrations/: 0001_initial.py
tests/: admin.py  conftest.py  generated_settings.py  models.py  settings.py  test_admin.py  test_context_processors.py  test_fixtures.py  test_geonames_integration.py  test_management.py  test_management_commands.py  test_middleware.py  test_misc.py  test_models.py  test_utils.py  urls.py  wsgi.py
