[tool.poetry]
name = "django-countries-plus"
version = "2.0.0"
description = "A django model & fixture containing all data from the countries table of Geonames.org"
authors = ["Andrew Cordery <cordery@gmail.com>"]
license = "MIT"
readme = "README.rst"
include = ["LICENSE", "*.rst", "*.md"]
packages = [
    {include = "countries_plus"}
]
homepage = "https://github.com/cordery/django-countries-plus"
repository = "https://github.com/cordery/django-countries-plus"
keywords = ["django-countries-plus"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: Django",
    "Framework :: Django :: 2.2",
    "Framework :: Django :: 3.0",
    "Framework :: Django :: 4.0",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
]

[tool.poetry.dependencies]
python = ">=3.7"
django = ">=2.2"
requests = "^2"

[tool.poetry.dev-dependencies]
coverage = "^6.3"
codecov = "^2.1"
pytest = "^7"
pytest-cov = "^3"
pytest-django = "^4.5"
tox = "^3.24"
bump2version = "^1.0.1"
tox-gh-actions = "^2.9.1"


[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
