[tool.poetry]
name = "django-countries-plus"
version = "2.2.0"
description = "A django model & fixture containing all data from the countries table of Geonames.org"
authors = ["Andrew Cordery <cordery@gmail.com>"]
license = "MIT"
readme = "README.rst"
include = ["LICENSE", "*.rst", "*.md"]
packages = [
    { include = "countries_plus" }
]
homepage = "https://github.com/cordery/django-countries-plus"
repository = "https://github.com/cordery/django-countries-plus"
keywords = ["django-countries-plus"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: Django",
    "Framework :: Django :: 3.2",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
]

[tool.poetry.dependencies]
python = ">=3.7,<4"
django = ">=3.2"
requests = "^2"

[tool.poetry.group.test.dependencies]
coverage = "^7"
pytest = "^7"
pytest-cov = "^4"
pytest-django = "^4.5"
tox = "^4"


[tool.poetry.group.dev.dependencies]
bump2version = "^1.0.1"
ruff = "^0.1.11"


[tool.ruff.format]
exclude = ["**/migrations/*"]


[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
